tests/neg/payload_mismatch.ovt
sensor s : rate(bool, (10, 0));
actuator a : rate(int, (10, 0));
extern node f {c: clock} (i : rate(int, c)) returns (o : rate(int, c));
a = f(s);
